--- a/src/component/Navbar.module.css
+++ b/src/component/Navbar.module.css
@@ -22,23 +22,39 @@ li a{
     text-decoration: none;
     color: black;
     padding: 14px 16px;
+    transition: background-color 0.3s, color 0.3s;
 }
 .Button{
-    
-    padding: 14px 16px; 
+    padding: 14px 16px;
+    transition: background-color 0.3s, color 0.3s; 
 }
 a:hover{
-    background-color: #f2f2f2;
+    background-color: #FCE9E9;
     padding: 14px 16px;
 }
 .Sd{
     height: 16px;
 }
-.btn{
+/* .btn{
     padding: 14px 16px;
     background-color: white;
     border: none;
 }
 .btn:hover{
     background-color: #f2f2f2;
+} */
+.btn{
+    background: #fff;
+    color: black;
+    display: flex;
+    text-align: center;
+    place-content: center;
+    place-items: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    border: none;
+    transition: background-color 0.3s, color 0.3s;
 }
+.btn:hover{
+    background-color: #FCE9E9;
+} 
