--- a/src/page/Home.module.css
+++ b/src/page/Home.module.css
@@ -86,3 +86,26 @@ place-items: center;
 .buttonTextHome{
     margin: 0;
 }
+.BgBawah{
+    display: block;
+    position: relative;
+    background-color: #141414;
+    height: auto;
+}
+.cardLine {
+    padding: 30px;
+}
+.textLineBawah{
+    text-align: start;
+    padding-bottom: 10px;
+    
+}
+.card{
+    padding: 4px ;
+    border: none;
+    border-radius: 6px;
+    width: 240px;
+    height: auto;
+    display: flex;
+    place-items: center;
+}
