--- a/src/component/Navbar.module.css
+++ b/src/component/Navbar.module.css
@@ -1,4 +1,3 @@
-
 ul{
 list-style-type: none;
 margin: 0;
@@ -16,7 +15,7 @@ li{
     height: 20px;
 }
 
-li a{
+.LinkNav{
     display: block;
     text-align: center;
     text-decoration: none;
@@ -28,13 +27,15 @@ li a{
     padding: 14px 16px;
     transition: background-color 0.3s, color 0.3s; 
 }
-a:hover{
+.LinkNav:hover{
     background-color: #FCE9E9;
     padding: 14px 16px;
 }
 .Sd{
-    height: 16px;
+    height: 14px;
+    padding: 0;
 }
+
 /* .btn{
     padding: 14px 16px;
     background-color: white;
