--- a/src/page/Home.module.css
+++ b/src/page/Home.module.css
@@ -1,11 +1,13 @@
 .BG{
 place-items: center;
 }
+
 .containter{
     position: relative;
     text-align: center;
     color: white;
 }
+
 .imgBG{
     display: block;
     width: 100%;
@@ -13,37 +15,44 @@ place-items: center;
     margin-left: auto;
     margin-right: auto;
 }
+
 .Br{
     position: absolute;
     bottom: 40%;
     left: 10%;
 }
+
 .Line{
     display: flex;
     align-items: center;
     padding: 0;
     margin: 0;
 }
+
 .LineText{
     padding-left: 12px;
     font-weight: 300;
     padding-top: 0;
     margin: 0;
 }
+
 .BigText{
     margin-top: 0px;
     margin-bottom: 0px;
     font-size: 5em;
 }
+
 .gap{
     padding-left: 20px;
 }
+
 .LineButton{
     display: flex;
     align-items: center;
     padding: 4%;
     border-radius: 4px;
 }
+
 /* button {
     border: none;
 }
@@ -63,6 +72,7 @@ place-items: center;
     border-radius: 4px;
     transition: background-color 0.3s, color 0.3s;
 }
+
 .LinkLine2{
     background: #cd2323;
     color: white;
@@ -75,36 +85,45 @@ place-items: center;
     border-radius: 4px;
     transition: background-color 0.3s, color 0.3s;
 }
+
 .LinkLine:hover{
     background: #cd2323; 
     color: white;
 }
+
 .LinkLine2:hover{
     background: #f1a7a7; 
     color: black;
 }
+
 .buttonTextHome{
     margin: 0;
 }
+
+/* Bagian Bawah */
 .BgBawah{
     display: block;
     position: relative;
     background-color: #141414;
     height: auto;
 }
+
 .cardLine {
     padding: 30px;
 }
+
 .textLineBawah{
     text-align: start;
     padding-bottom: 10px;
     
 }
+
 .card{
+    overflow: hidden;
     padding: 4px ;
     border: none;
     border-radius: 6px;
-    width: 240px;
+    width: 100%;
     height: auto;
     display: flex;
     place-items: center;
