--- a/src/page/User.module.css
+++ b/src/page/User.module.css
@@ -8,18 +8,68 @@
     padding-left: 4%;
 }
 .ContainerUser{
-    padding-top: 4%;
-    padding-bottom: 4%;
-    padding-left: 35%;
-    padding-right: 35%;
+    position: relative;
+    overflow: hidden;
+    padding-top: 5%;
+    padding-bottom: 5%;
+    padding-left: 10%;
+    padding-right: 10%;
+    background-color: #A3A09F;
 }
-.CarduserKiri{
-    padding: 4%;
-    
+.FormGrup{
+    margin-bottom: 10px;
+    font-size: xx-large;
+    margin-bottom: 10%;
+}
+.FormGrup p {
+    margin: 0px;
+}
+.FormGrup h1 {
+    margin: 0px;
+}
+.CarduserKiri {
+    display: block;
+    background-color: aqua;
+    border-radius: 10px;
+    padding: 8%;
     float: left;
 }
-.CarduserKanan{
-    padding: 4%;
-    float: right;
 
+.linkUser {
+    display: block; /* Ensures it takes full width */
+    margin-top: 20px; /* Adjust margin as needed */
+    text-decoration: none;
+    background-color: beige;
+    padding: 10px; /* Add some padding for better spacing */
+    text-align: center; /* Center the text */
+    color: #141414; /* Adjust color if needed */
+}
+
+.linkUser:hover {
+    text-decoration: underline;
+}
+
+.CarduserKanan {
+    display: block;
+    padding: 8%;
+    padding-left: 50%;
+}
+
+.LineUser {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
+
+.FormGrup1 {
+    margin-bottom: 10px;
+    font-size: xx-large;
+}
+
+.FormGrup1 p {
+    margin: 0px;
+}
+
+.FormGrup1 h1 {
+    margin: 0px;
 }
